# napari_lattice

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  LICENSE  LLSZ workflow design.docx  README.md  config.yaml  config.yml  environment.yml  environment_Linux.yml  environment_reduced.yml  index.html  lattice_processing.py  main.py  mkdocs.yml  objects.inv  old_main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/lint/: action.yml
.github/workflows/: docs.yml  plugin_preview.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md
api/: index.html
cli/: index.html
core/: meta.yaml  pyproject.toml
core/lattice_lightsheet_core/: io.py  lattice_data.py  llsz_core.py  read_psf.py  ui_core.py  utils.py
core/lattice_lightsheet_core/cmds/: __main__.py
core/lls_core/: __init__.py  config.py  cropping.py  deconvolution.py  estimate.py  io.py  lattice_data.py  llsz_core.py  mip.py  read_psf.py  tiling.py  types.py  utils.py  workflow.py  writers.py
core/lls_core/cmds/: __main__.py
core/lls_core/models/: __init__.py  crop.py  deconvolution.py  deskew.py  lattice_data.py  output.py  results.py  utils.py
core/lls_core/sample/: README.txt  __init__.py  multich_multi_time.tif
core/lls_core/sample/config/: README.md  config.yaml  config.yml
core/lls_core/sample/psfs/zeiss_simulated/: README.md  description.txt
core/tests/: conftest.py  params.py  test_arg_parser.py  test_batch_deskew_args.py  test_batch_deskew_yaml.py  test_cli.py  test_crop_deskew.py  test_crop_placement.py  test_deconvolution.py  test_deskew.py  test_lattice_data.py  test_mip.py  test_parallel_processing.py  test_process.py  test_tiling.py  test_validation.py  test_workflows.py  utils.py
core/tests/data/crop/: roi_1.tif  roi_2.tif
core/tests/workflows/argument_order/: custom_function.py  test_workflow.yml
core/tests/workflows/binarisation/: workflow.yml
development/: index.html
docs/: api.md  cli.md  development.md  index.md  installation.md  napari_plugin.md  workflow.md
docs/miscellaneous/: index.md  rois_cropping.md
docs/napari_plugin/: index.md  plugin_usage.md  starting_plugin.md
docs/workflows/: index.md  interactive_workflow.md  programmatic_workflow.md
docs/workflows/notebooks/: Image_analysis_workflow_simple.ipynb
files/: zeiss_lls7_MIP_rotate_roi.ijm
installation/: index.html
llsz/: array_processing.py  crop_utils.py  io.py  llsz_core.py  tiling.py  ui.py  utils.py
miscellaneous/: index.html
napari_plugin/: index.html
napari_plugin/plugin_usage/: index.html
notebooks/: Batched Deskew.ipynb  Deskew_Save.ipynb  Deskew_Save_recursive_function.ipynb  Deskew_Save_simple.ipynb  Image_analysis_workflow_advanced.ipynb  Image_analysis_workflow_example.ipynb  Image_analysis_workflow_simple.ipynb  README.md  Reverse_deskewing_clesperanto.ipynb  Untitled-1.ipynb  Using workflows in functions.ipynb  Workflows in napari_lattice.ipynb  deconvolution.ipynb  deconvolution_RedFishLion.ipynb  deconvolution_RedLionFish.ipynb  deconvolution_pycudadecon.ipynb  deskew_affine_transform.ipynb  deskew_artefact_opm_comparison.ipynb  deskew_cpu_gpu.ipynb  deskewing_demo.ipynb  inverse_deskewing.ipynb  inverse_deskewing_and_crop_deskew.ipynb  psf_cropping.ipynb  save_bigdataviewer_h5_affine_transform.ipynb  saving_images_tiffile.ipynb  test_notebook.ipynb  tiling_images.ipynb
notebooks/NET_analysis/: test.yml
notebooks/educational/: deskewing_demo_pyclesperanto_prototype.ipynb
notebooks/old/: deconvolution_RedFishLion_1 LMAP.ipynb  deconvolution_RedLionFish.ipynb  psf_cropping.ipynb
notebooks/troubleshooting/: troubleshooting_workflows.ipynb
notebooks/workflow_examples/: RBC_segmentation_workflow.yaml  workflow_segmentation.ipynb
plugin/: .pre-commit-config.yaml  pyproject.toml
plugin/napari_lattice/: _dock_widget.py  _reader.py  disableable.py  dock_widget.py  fields.py  icons.py  napari.yaml  parent_connect.py  reader.py  shape_selection.py  shape_selector.py  ui_core.py  utils.py
plugin/tests/: test_dock_widget.py  test_reader.py
sample_data/: README.md  roi_correct_zeiss_lls7.ijm
sample_data/config/: README.md
sample_data/psfs/zeiss_experimental/: 488_PSF.czi  561_PSF.czi  640_PSF.czi  notes.txt
sample_data/psfs/zeiss_simulated/: description.txt
search/: search_index.json
src/llsz/: __init__.py  array_processing.py  crop_utils.py  dock_widget.ui  io.py  llsz_core.py  tiling.py  transformations.py  ui.py  utils.py
src/llsz/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
src/napari_lattice/: __init__.py  __main__.py  _decon.py  _dock_widget.py  _reader.py  config.py  crop_deskew.py  deskew.py  io.py  llsz_core.py  napari.yaml  ui_core.py  use_workflow.py  utils.py
src/napari_lattice/_tests/: deconvolution.py  test_batch_deskew.py  test_batch_deskew_args.py  test_batch_deskew_yaml.py  test_crop_deskew.py  test_deconvolution.py  test_deskew.py  test_dock_widget.py  test_nothing.py
src/napari_lattice/_tests/data/: psf.tif
src/napari_lattice/cmds/: __main__.py
typings/: magicclass.pyi
workflow/: index.html
workflow_examples/cellpose/: cellpose_1.py  cellpose_1_single_channel.ipynb  cellpose_1_workflow.yml  cellpose_2.py  cellpose_2_multi_channel.ipynb  cellpose_2_workflow.yml
workflow_examples/regionprops_workflow/: Segmentation_regionprops_multich_workflow.ipynb  Segmentation_regionprops_workflow.ipynb  lattice_measurement_0.csv  measure_regionprops.py  measure_regionprops_multich.py  regionprops_multich_workflow.yml  regionprops_workflow.yml
