[metadata]
name = napari-lattice
version = 0.1.1a
author = Pradeep R
author_email = bioimageanalysis@wehi.edu.au

license = GPL-3.0-only
description = Napari plugin to process lattice lightsheet data particularly from the Zeiss lattice lightsheet. It can also be run from the terminal without napari.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    napari[all]
    aicspylibczi>=3.0.5
    aicsimageio[all]
    dask
    dask-image
    dask[distributed]
    magic-class>=0.6.7
    magicgui
    pyopencl
    read-roi
    gputools
    pyclesperanto_prototype>=0.17.3
    napari-aicsimageio>=0.6.0
    napari-workflows
    napari-workflow-inspector
    RedLionfish

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-lattice = napari_lattice:napari.yaml
console_scripts =
    napari_lattice = napari_lattice.cmds.__main__:main 