[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "napari-lattice"
version = "1.0.2"
authors = [
    {name = "Pradeep Rajasekhar"},
    {name = "Lachlan Whitehead"},
    {name = "Robert Haase"},
    {name = "Michael Milton"},
]
license = {text = "GPL-3.0-only"}
description = "Napari plugin for analysing and visualizing lattice lightsheet and Oblique Plane Microscopy data."
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Framework :: napari",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.8"
dependencies = [
    "aicsimageio>=4.6.3",
    "dask[distributed]",
    # This isn't used directly, but we need to pin this version
    "fsspec>=2022.8.2",
    "importlib_resources",
    "lls_core",
    # The lower bound is because we need this Python 3.8 fix: https://github.com/hanjinliu/magic-class/pull/108
    "magic-class>=0.7.5",
    "magicgui<0.8.0",
    "napari-aicsimageio>=0.7.2",
    "napari-workflow-inspector",
    "napari-workflows>=0.2.8",
    "napari[all]>=0.4.11",
    "npy2bdv",
    "numpy<2",
    "psutil",
    "pyclesperanto_prototype>=0.20.0",
    "pydantic",
    "qtpy",
    "typing_extensions>=4.7.0",
    "rich",
    "StrEnum",
    "xarray"
]

[project.urls]
Repository = "https://github.com/BioimageAnalysisCoreWEHI/napari_lattice"
BugTracker = "https://github.com/BioimageAnalysisCoreWEHI/napari_lattice/issues"
Documentation = "https://github.com/BioimageAnalysisCoreWEHI/napari_lattice/wiki"
SourceCode = "https://github.com/BioimageAnalysisCoreWEHI/napari_lattice"
UserSupport = "https://github.com/BioimageAnalysisCoreWEHI/napari_lattice/issues"

[tool.setuptools.package-data]
napari_lattice = ["*.yaml", "*.svg", "*.png"]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt"  #for qtbot fixture
]

[project.entry-points."napari.manifest"]
napari_lattice = "napari_lattice:napari.yaml"

[tool.fawltydeps]
ignore_unused = [
    # None of the testing packages are imported
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",

    # These napari plugins are needed to use the plugin, but aren't imported directly
    "napari-aicsimageio",
    "napari-workflow-inspector",
    "napari-spreadsheet",

    # This is pinned but unused
    "fsspec",
    "imageio"
]
output_format = "human_detailed"  

[tool.pyright]
typeCheckingMode = "off"
reportUndefinedVariable = "error"
reportMissingImports = "none"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUntypedFunctionDecorator = false
reportMissingTypeArgument = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportUnnecessaryComparison = false
